# verso

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  example.md
.github/workflows/: rust.yml
examples/: check-examples.sh  example.md  example.py  run-example-test.sh
examples/reference/: example.md
examples/reference/test/: example-2.md  nested.md
examples/test/: example-2.md  example-2.py  nested.md  nested.rs
examples/test/level-2/: l2.md
examples/traditional/: build.sh  traditional.md
presentation/: build.sh  index.html  presentation.md
src/: lib.rs  main.rs  recto.rs  tests.rs  verso.rs
