[package]
name = "verso"
version = "0.1.0"
authors = ["Nick Pascucci <ndpi@alum.mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "verso"
path = "src/verso.rs"

[[bin]]
name = "recto"
path = "src/recto.rs"