[package]
name = "verso"
version = "0.2.0"
authors = ["Nick Pascucci <ndpi@alum.mit.edu>"]
edition = "2018"

description = "A literate programming tool that does things a little differently."
repository = "https://github.com/nickpascucci/verso"
readme = "README.md"

license = "GPL-3.0-only"

keywords = ["literate-programming"]
categories = ["command-line-utilities", "development-tools"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "verso"
path = "src/verso.rs"

[[bin]]
name = "recto"
path = "src/recto.rs"
